# ptcgp-data

./: .gitignore  Cargo.toml  README.md  fetch_pull_rates.py  handoff.md  schema.sql
.github/workflows/: release.yml
data/: base_pokemon.json  card_sources.json  elements.json  pack_variant_names.json  promo_sources.json  rarities.json  sets.json
data/card_versions/A1/: 001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json  010.json  011.json  012.json  013.json  014.json  015.json  016.json  017.json  018.json  019.json  020.json  021.json  022.json  023.json  024.json  025.json  026.json  027.json  028.json  029.json  030.json  031.json  032.json  033.json  034.json  035.json  036.json  037.json  038.json  039.json  040.json  (+246 more)
data/card_versions/A1a/: 001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json  010.json  011.json  012.json  013.json  014.json  015.json  016.json  017.json  018.json  019.json  020.json  021.json  022.json  023.json  024.json  025.json  026.json  027.json  028.json  029.json  (+57 more)
data/cards/: 00001.json  00002.json  00003.json  00004.json  00005.json  00006.json  00017.json  00019.json  00020.json  00023.json  00024.json  00025.json  00026.json  00028.json  00029.json  00031.json  00033.json  00034.json  00038.json  00039.json  00042.json  00043.json  00044.json  00046.json  00048.json  00050.json  00051.json  00052.json  00053.json  00054.json  00055.json  00056.json  00065.json  00066.json  00067.json  0007.json  00070.json  00071.json  00072.json  00074.json  (+2107 more)
db/: Cargo.toml  schema.sql
db/src/: check_pull_rates.rs  main.rs
scraper/: Cargo.toml
scraper/src/: client.rs  images.rs  limitless.rs  main.rs  models.rs  output.rs  pokeapi.rs  raenonx.rs
(+6410 files in other folders)
