[package]
name = "ptcgp-db"
version = "0.1.0"
edition = "2021"
default-run = "db"

[[bin]]
name = "db"
path = "src/main.rs"

[[bin]]
name = "check-pull-rates"
path = "src/check_pull_rates.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision"] }
rust_decimal = { version = "1", features = ["serde-arbitrary-precision"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
