[package]
name = "ptcgp-scraper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scraper"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
regex = "1"
reqwest = { version = "0.12", features = ["gzip", "brotli", "json"] }
scraper = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision"] }
rust_decimal = { version = "1", features = ["serde-arbitrary-precision"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
